--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 		 			<i class="em em-cherry_blossom" aria-role="presentation" aria-label="CHERRY BLOSSOM" id="cherry-blossom"></i>
 		 		</h1>
 				<img src="images/profile-picture.jpg" alt="Violette Lisbonis" class="img-circle">
- 				<p> I'm part of the double degree with Assas University in Paris, I study digital communication there and I'm really excited to lear to code ! I love reading, traveling and coding now. </p>
+ 				<p> I'm part of the double degree with Assas University in Paris, I study digital communication there and I'm really excited to learn how to code ! I love reading, traveling and coding now. </p>
  			</div>
  			<div class="card-white" id="reading">
  				<h2> Reading 
  					<i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>
  				</h2>
-		 		<p>I've always loved book. Lately, I'm mostly reading essays for my master diisertation but I also love novel - mostly thriller novels.</p>
+		 		<p>I've always loved boosk. Lately, I'm mostly reading essays for my master dissertation but I also love novel - mostly thriller novels.</p>
  			</div>
  			<div class="card-white" id="traveling">
  				<h2> Traveling !
  					<i class="em em-earth_asia" aria-role="presentation" aria-label="EARTH GLOBE ASIA-AUSTRALIA"></i> 
  				</h2>	
-				<p>I've traveled a lot but I think my favorite destination was Melbourne. I hope to go back ther someday !</p>
+				<p>I've traveled a lot but I think my favorite destination was Melbourne. I hope to go back there someday !</p>
  			</div>
 			<div class="card-white" id="web">
  				<h2> Web Development
